@@ -223,6 +223,22 @@ name|apache
 operator|.
 name|ivy
 operator|.
+name|core
+operator|.
+name|resolve
+operator|.
+name|ResolveOptions
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|ivy
+operator|.
 name|plugins
 operator|.
 name|report
@@ -564,6 +580,30 @@ name|getCache
 argument_list|()
 argument_list|)
 decl_stmt|;
+name|String
+name|resolvedId
+init|=
+name|getResolveId
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|resolvedId
+operator|==
+literal|null
+condition|)
+block|{
+name|resolvedId
+operator|=
+name|ResolveOptions
+operator|.
+name|getDefaultResolveId
+argument_list|(
+name|getResolvedModuleId
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 for|for
 control|(
 name|int
@@ -588,8 +628,7 @@ name|cacheMgr
 operator|.
 name|getConfigurationResolveReportInCache
 argument_list|(
-name|getResolveId
-argument_list|()
+name|resolvedId
 argument_list|,
 name|confs
 index|[
